--- a/secret/dev.env
+++ b/secret/dev.env
@@ -1,4 +1,4 @@
-MYSQL_ROOT_PASSWORD=12345678
+MYSQL_ROOT_PASSWORD=passw123!
 MYSQL_USER=dev
-MYSQL_PASSWORD=12345678
+MYSQL_PASSWORD=passw123!
 MYSQL_DATABASE=orders
