1) Models [orders, services, users] 2) OrdersSearch 3) Migration for foreign keys in table orders 4) Orders view, display main orders field 5) Status filter

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,13 +14,14 @@ services:
 
   db:
     image: mysql
+    command: --default-authentication-plugin=mysql_native_password
     restart: always
     volumes:
       - ./data/db:/var/lib/mysql
     env_file:
       - ./secret/dev.env
     ports:
-      - "8890:3306"
+      - "3306:3306"
 
 
 networks:
