--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 
+LANG=en
 ROOT_DIR=./
 LOGS_DIR=./docker/logs
 SERVER_CONF_DIR=./docker/conf
@@ -11,6 +12,7 @@ HTTPS_PORT=443
 
 DB_IMAGE=mysql
 DB_PORT=3306
+DB_CONTAINER_NAME=orders_list_db_1
 MYSQL_ROOT_PASSWORD=passw123!
 MYSQL_USER=dev
 MYSQL_PASSWORD=passw123!
